--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11113,7 +11113,8 @@ footer.mobile {
 section.how h2.col-sm-3 {
   padding-top: 24px;
   padding-bottom: 0;
-  letter-spacing: 1px; }
+  letter-spacing: 1px;
+  text-transform: inherit; }
 
 section.how object {
   display: inline-block; }
@@ -11831,6 +11832,63 @@ section.home-search .home-search-mobile {
   @media screen and (max-width: 767px) {
     #home section.deals .btn-whitered {
       margin-bottom: 20px; } }
+
+#home section.press {
+  padding: 0;
+  height: 140px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  align-items: center; }
+  @media screen and (max-width: 767px) {
+    #home section.press {
+      -webkit-box-direction: normal;
+      -webkit-box-orient: vertical;
+      -webkit-flex-direction: column;
+      -moz-flex-direction: column;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -ms-flex-pack: distribute;
+      -webkit-justify-content: space-around;
+      -moz-justify-content: space-around;
+      justify-content: space-around; } }
+  #home section.press h2 {
+    text-transform: none;
+    margin-right: 100px;
+    padding: 0; }
+    @media screen and (max-width: 991px) {
+      #home section.press h2 {
+        margin-right: 50px;
+        margin-right: 0; } }
+  #home section.press .flex-container {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+    -webkit-justify-content: space-around;
+    -moz-justify-content: space-around;
+    justify-content: space-around; }
+    #home section.press .flex-container img {
+      max-height: 40px;
+      -webkit-filter: grayscale(100%);
+      -moz-filter: grayscale(100%);
+      -ms-filter: grayscale(100%);
+      -o-filter: grayscale(100%);
+      filter: grayscale(100%);
+      margin-left: 30px;
+      opacity: 0.6; }
+      @media screen and (max-width: 991px) {
+        #home section.press .flex-container img {
+          margin-left: 10px;
+          max-height: 25px; } }
 
 #home section.blog-posts .post img {
   max-width: 100%;
