--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -53,13 +53,13 @@ header {
 
 		margin-top: 15px;
 		@media screen and (max-width: $screen-xs-max) {
-			margin-top: 25px;
+			// margin-top: 25px;
 		}
 		width: 28px;
 		height: 28px;
 		margin-right: 15px;
 		&.close {
-			background: url(../img/icons/mobile-menu/cross.svg) no-repeat center center;
+			background: url(../img/icons/mobile-menu/croix.svg) no-repeat center center;
 			background-size: 80%;
 			opacity: 1;
 		}
