--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -234,7 +234,7 @@ a {
         background-color: white;
         border: 2px solid #e6e6e6;
         font-family: $font-second;
-        font-weight: $latoBold;
+        font-weight: $regular;
         font-size: 1.4em;
         color: $grey;
         &:focus {
